[package]
name = "pago"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
structopt = "0.3"
textwrap = { version = "0.14", default-features = false, features = ["unicode-width", "smawk", "terminal_size"] }
termion = "1"
tokio = { version = "1", features = ["macros", "net", "rt"] }
trust-dns-client = "0.20"
